Avoid Page from shrinking on narrow devices

--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,9 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
+    min-width: 450px;
     font-family: 'Frank Ruhl Libre', serif;
+    overflow: auto;s
 }
 
 .element-shadow{
